--- a/FitApp/Base.lproj/LaunchScreen.storyboard
+++ b/FitApp/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,13 +16,49 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="snj-JH-cm7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shark_logo" translatesAutoresizingMaskIntoConstraints="NO" id="xRA-qc-NII">
+                                <rect key="frame" x="62.5" y="170" width="250" height="151"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sop-mT-K8G">
+                                <rect key="frame" x="114" y="371" width="147.5" height="58.5"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="FitApp">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" metaFont="system" size="50"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="snj-JH-cm7" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="AFj-HY-orU"/>
+                            <constraint firstItem="xRA-qc-NII" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="AQ9-hJ-cuz"/>
+                            <constraint firstItem="snj-JH-cm7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kzp-XL-xVu"/>
+                            <constraint firstItem="xRA-qc-NII" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PeV-Ff-kcc"/>
+                            <constraint firstItem="sop-mT-K8G" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hQa-gE-dJY"/>
+                            <constraint firstItem="snj-JH-cm7" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="hi4-az-IQl"/>
+                            <constraint firstItem="snj-JH-cm7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kGw-05-L87"/>
+                            <constraint firstItem="sop-mT-K8G" firstAttribute="top" secondItem="xRA-qc-NII" secondAttribute="bottom" constant="50" id="lTS-Vh-fpJ"/>
+                            <constraint firstItem="snj-JH-cm7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vuN-EO-AQM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch" width="375" height="812"/>
+        <image name="shark_logo" width="250" height="151"/>
+    </resources>
 </document>
